make style adjustments only for second carousel

--- a/public/index.html
+++ b/public/index.html
@@ -151,8 +151,6 @@
                                 Das SDBB setzt dabei auf eine nationale aber flexible Lösung, welche kantonale Eigenheiten
                                 abzubilden vermag.
                             </p>
-                            <p class="placeholder-text">Hier müsste dieser magische Supersatz kommen (warum das Projekt gewinnt),
-                                am besten gemerged mit dem was bereits steht hier.</p>
                         </div>
                         <div class="col-lg-3">
                             <img class="visible-lg pull-right" src="img/counselor.png" height="200px" />
@@ -367,61 +365,61 @@
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Der Berater wählt die entsprechenden Testverfahren für seine Klienten aus.</p>
                                 </div>
-                                <img src="img/demo/image1.png" class="pictures" />
+                                <img src="img/demo/image1.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Gewünschte Berichtselemente, Vergleichsnormen und andere Aspekte werden konfiguriert.</p>
                                 </div>
-                                <img src="img/demo/image2.png" class="pictures" />
+                                <img src="img/demo/image2.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Die Testeinladung wird erstellt und der Test kann durch den Klienten gestartet werden.</p>
                                 </div>
-                                <img src="img/demo/image3.png" class="pictures" />
+                                <img src="img/demo/image3.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Der Klient sieht seine neuen und erledigten Testungen.</p>
                                 </div>
-                                <img src="img/demo/image4.png" class="pictures" />
+                                <img src="img/demo/image4.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Nach erfolgreich abgeschlossener Testung wird automatisch ein Bericht zu Handen des Beraters erstellt.</p>
                                 </div>
-                                <img src="img/demo/image5.png" class="pictures" />
+                                <img src="img/demo/image5.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Systemnutzer können verschieden Profile mit unterschiedlichen Rollen haben, zwischen denen gewechselt werden kann.</p>
                                 </div>
-                                <img src="img/demo/image6.png" class="pictures" />
+                                <img src="img/demo/image6.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Administratoren können die angehängten Testverfahren editieren, deaktivieren und neue hinzufügen.</p>
                                 </div>
-                                <img src="img/demo/image7.png" class="pictures" />
+                                <img src="img/demo/image7.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Die Testverfahren verfügen über verschiedene Charakteristiken und Konfigurationsmöglichkeiten.</p>
                                 </div>
-                                <img src="img/demo/image8.png" class="pictures" />
+                                <img src="img/demo/image8.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Administration der Systemnutzer und ihre Rollen- und Rechtezuteilung.</p>
                                 </div>
-                                <img src="img/demo/image9.png" class="pictures" />
+                                <img src="img/demo/image9.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Auszug einer Nutzungsstatistik.</p>
                                 </div>
-                                <img src="img/demo/image10.png" class="pictures" />
+                                <img src="img/demo/image10.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
@@ -431,19 +429,19 @@
                                         der Normen und statistischen Auswertungen zur Verbesserung der Testverfahren.
                                     </p>
                                 </div>
-                                <img src="img/demo/image11.png" class="pictures" />
+                                <img src="img/demo/image11.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Administratoren können Systemnutzern Rollen vergeben und sie Organisationen zuweisen.</p>
                                 </div>
-                                <img src="img/demo/image12.png" class="pictures" />
+                                <img src="img/demo/image12.png" class="demo-pictures" />
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
                                     <p><i class="fa fa-info-circle"></i> Zuweisung der Nutzerrollen.</p>
                                 </div>
-                                <img src="img/demo/image13.png" class="pictures" />
+                                <img src="img/demo/image13.png" class="demo-pictures" />
                             </div>
                         </div>
 
