add sven's feedback

--- a/public/index.html
+++ b/public/index.html
@@ -147,9 +147,9 @@
                             </p>
                             <p>
                                 Das SDBB stellt mit der Online Test Plattform (OTP) den kantonalen Berufs-, Studien- und
-                                Laufbahnberatungsstellen eine Reihe relevanter Instrumente erstmal online zur Verfügung.
-                                Das SDBB setzt dabei auf eine nationale aber flexible Lösung, welche kantonale Eigenheiten
-                                abzubilden vermag.
+                                Laufbahnberatungsstellen eine Reihe relevanter, wissenschaftlich fundierter Instrumente
+                                erstmal online zur Verfügung. Das SDBB setzt dabei auf eine nationale aber flexible Lösung,
+                                welche national Synergien nutzt und trotzdem kantonale Eigenheiten gut abzubilden vermag.
                             </p>
                         </div>
                         <div class="col-lg-3">
@@ -165,8 +165,10 @@
                                 <dd>
                                     Die OTP digitalisiert und zentralisiert die Durchführung, Auswertung und grafische
                                     Resultaterückmeldung von eignungsdiagnostischen Tests in den drei Landessprachen.
-                                    Eine Fülle von Leistungs- und Interessetests hilft Beratenden, passende Berufsbilder
-                                    für ihr Klientel zu finden.
+                                    Digitale Testdurchführungen führen zu qualitativ besseren Daten als die herkömmliche
+                                    Papiermethode. Durch die Zentralisierung bewirkt Plattform über die Kantone hinweg
+                                    eine Standardisierung was zusätzlich zur Verbesserung der Service-Qualität im Bereich der
+                                    Berufs- und Laufbahnberatung beiträgt.
                                 </dd>
                                 <dt>
                                     Klarer Nutzen der angebotenen Leistungen
