add magic sentence

--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,13 @@
                     </div>
                     <div class="intro-text">
                         <span class="name">Berufsberatung 2.0</span>
-                        <hr class="star-light">
                         <span class="skills">Die Online Test Plattform für Berufsberatung in der Schweiz</span>
+                        <hr/>
+                        <div class="row">
+                            <div class="col-lg-1"><i class="fa fa-lightbulb-o fa-4x pull-right"></i></div>
+                            <div class="col-lg-11"><p>Digitalisierung in der Berufsberatung schafft Public Value: Die offene, testanbieterunabhängige Plattform nutzt Synergien zwischen Kantonen und trägt kantonalen Eigenheiten Rechnung. Digitalisierung und Zentralisierung führen zu verbesserter Service-Qualität. Orts- und Geräteunabhängigkeit führt zu Komfort für den Klienten und automatische Testauswertungen vereinfachen die Arbeit des Beraters.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
