--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                                     Resultaterückmeldung von eignungsdiagnostischen Tests in den drei Landessprachen.
                                     Digitale Testdurchführungen führen zu qualitativ besseren Daten als die herkömmliche
                                     Papiermethode. Durch die Zentralisierung bewirkt Plattform über die Kantone hinweg
-                                    eine Standardisierung was zusätzlich zur Verbesserung der Service-Qualität im Bereich der
+                                    eine Standardisierung, was zusätzlich zur Verbesserung der Service-Qualität im Bereich der
                                     Berufs- und Laufbahnberatung beiträgt.
                                 </dd>
                                 <dt>
@@ -400,7 +400,7 @@
                             </div>
                             <div class="item">
                                 <div class="carousel-caption">
-                                    <p><i class="fa fa-info-circle"></i> Systemnutzer können verschieden Profile mit unterschiedlichen Rollen haben, zwischen denen gewechselt werden kann.</p>
+                                    <p><i class="fa fa-info-circle"></i> Systemnutzer können verschiedene Profile mit unterschiedlichen Rollen haben, zwischen denen gewechselt werden kann.</p>
                                 </div>
                                 <img src="img/demo/image6.png" class="demo-pictures" />
                             </div>
