--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,14 @@
                         <hr/>
                         <div class="row">
                             <div class="col-lg-1"><i class="fa fa-lightbulb-o fa-4x pull-right"></i></div>
-                            <div class="col-lg-11"><p>Digitalisierung in der Berufsberatung schafft Public Value: Die offene, testanbieterunabhängige Plattform nutzt Synergien zwischen Kantonen und trägt kantonalen Eigenheiten Rechnung. Digitalisierung und Zentralisierung führen zu verbesserter Service-Qualität. Orts- und Geräteunabhängigkeit führt zu Komfort für den Klienten und automatische Testauswertungen vereinfachen die Arbeit des Beraters.</p>
+                            <div class="col-lg-11">
+                                <p>
+                                    Digitalisierung in der Berufsberatung schafft Public Value: Die offene,
+                                    testanbieterunabhängige Plattform nutzt Synergien zwischen Kantonen und trägt
+                                    kantonalen Eigenheiten Rechnung. Digitalisierung und Zentralisierung führen zu
+                                    verbesserter Service-Qualität. Orts- und Geräteunabhängigkeit bedeuten mehr Komfort
+                                    für den Klienten, automatische Testauswertungen vereinfachen die Arbeit des Beraters.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -171,7 +178,7 @@
                                     Die OTP digitalisiert und zentralisiert die Durchführung, Auswertung und grafische
                                     Resultaterückmeldung von eignungsdiagnostischen Tests in den drei Landessprachen.
                                     Digitale Testdurchführungen führen zu qualitativ besseren Daten als die herkömmliche
-                                    Papiermethode. Durch die Zentralisierung bewirkt Plattform über die Kantone hinweg
+                                    Papiermethode. Durch die Zentralisierung bewirkt die Plattform über die Kantone hinweg
                                     eine Standardisierung, was zusätzlich zur Verbesserung der Service-Qualität im Bereich der
                                     Berufs- und Laufbahnberatung beiträgt.
                                 </dd>
