end version of demo section

--- a/public/index.html
+++ b/public/index.html
@@ -475,7 +475,17 @@
             <div class="row">
                 <div class="col-lg-6 text-center">
                     <h3>Klientenrolle</h3>
-
+                    <a href="https://otp-quality.sdbb.ch/" class="btn btn-outline" role="button">Als KlientIn einloggen</a>
+                    <p>
+                        Hierzu die Token verwenden, welche der Eingabe beiliegen.
+                    </p>
+                    <p>
+                        Nach dem Login als KlientIn zeigt eine Übersicht die zur Verfügung gestellten Tests und deren
+                        Zustand. Per Klick auf einen Test kann dieser gestertet werden.</p>
+                    <p>
+                        Für jeden Test gibt es einen spezifischen Workflow mit unterschiedlichen Fragen. Über das Dropdown
+                        Menu oben links, können auf der Testplattform die einzelnen Schritte übersprungen werden.
+                    </p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <h3>Beraterrolle</h3>
@@ -484,6 +494,30 @@
                         Dazu die angegebenen Email/Passwort Kombinationen verwenden. Die Angaben finden Sie im
                         juryrelevanten Teil der Eingabe.
                     </p>
+                    <p>Nach dem Login sieht der Berater / die Beraterin seine /ihre verwalteten Klienten und kann Neue anlegen.</p>
+                    <p>
+                        Bei den einzelnen Klienten können die Stammdaten editiert, neue Tests hinzugefügt, Berichte eingesehen
+                        oder neue Auswertungen durchgeführt werden.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <hr />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8">
+                    <p>
+                        Für vertiefte Informationen bestehen zudem vom SDBB zur Verfügung gestellte
+                        <a href="http://test.sdbb.ch/1421.aspx">Video Tutorials</a> sowie ein
+                        <a href="http://test.sdbb.ch/dyn/download/1421-1544-1-otp-praxis-anwender_handbuch_v1.1.1.pdf">Anwenderhandbuch OTP</a>.
+                    </p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Kompletter Beispielbericht eines Leistungstests:</p>
+                    <a href="pdf/BRTA_Rapport_OTP.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-3x"></i>
+                    </a>
                 </div>
             </div>
         </div>
