remove unneeded stuff

--- a/public/index.html
+++ b/public/index.html
@@ -516,7 +516,7 @@
                 </div>
                 <div class="col-lg-4">
                     <p>Kompletter Beispielbericht eines Leistungstests:</p>
-                    <a href="pdf/BRTA_Rapport_OTP.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-3x"></i>
+                    <a href="pdf/BRTA-Beispielbericht.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-3x"></i>
                     </a>
                 </div>
             </div>
