add chapter icons to solution

--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
                         <div class="col-lg-6">
                             <dl>
                                 <dt>
-                                    Informationsqualität und -quantität
+                                    <i class="fa fa-check-square"></i> Informationsqualität und -quantität
                                 </dt>
                                 <dd>
                                     Die OTP digitalisiert und zentralisiert die Durchführung, Auswertung und grafische
@@ -183,7 +183,7 @@
                                     Berufs- und Laufbahnberatung beiträgt.
                                 </dd>
                                 <dt>
-                                    Klarer Nutzen der angebotenen Leistungen
+                                    <i class="fa fa-check-square"></i> Klarer Nutzen der angebotenen Leistungen
                                 </dt>
                                 <dd>
                                     Die OTP vereinfacht den Beratungsprozess für alle Beteiligten. Beratende weisen
@@ -195,7 +195,7 @@
                                     der Verfahren. Die Kantone wissen jederzeit um ihre Beratungszahlen und -kosten.
                                 </dd>
                                 <dt>
-                                    Abstimmung auf Zielpublikum, Usability und Informationsarchitektur, Orientierung
+                                    <i class="fa fa-check-square"></i> Abstimmung auf Zielpublikum, Usability, Informationsarchitektur, Orientierung
                                 </dt>
                                 <dd>
                                     Die Beratenden werden in ihrer täglichen Arbeit unterstützt und durch die Prozesse geführt.
@@ -209,7 +209,7 @@
                         <div class="col-lg-6">
                             <dl>
                                 <dt>
-                                    Interaktion, Kommunikation, Partizipation
+                                    <i class="fa fa-check-square"></i> Interaktion, Kommunikation, Partizipation
                                 </dt>
                                 <dd>
                                     OTP erlaubt eine orts-, zeit- und geräteunabhängige Interaktion und Kommunikation.
@@ -217,7 +217,7 @@
                                     eine höchst mögliche Flexibilität für die Anwender der OTP und deren Klienten erreicht.
                                 </dd>
                                 <dt>
-                                    Sicherheit
+                                    <i class="fa fa-check-square"></i> Sicherheit
                                 </dt>
                                 <dd>
                                     Die OTP ist auf optimale Informationssicherheit und hohe Datenschutzanforderungen
@@ -228,7 +228,7 @@
                                     anonymisierten Rohdaten ihrer Verfahren exportieren. Personenbezogene Daten werden
                                     automatisch nach 6 Monaten gelöscht.
                                 </dd>
-                                <dt>Technologie</dt>
+                                <dt><i class="fa fa-check-square"></i> Technologie</dt>
                                 <dd>
                                     Für die Umsetzung der Lösung wurden eine Reihe moderner Web-Stacks eingesetzt. Die
                                     Kommunikation zwischen den Testverfahren und der Verwaltungsplattform läuft über eine
