small ux improvements

--- a/public/index.html
+++ b/public/index.html
@@ -471,8 +471,7 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
+            <div class="row padding-top">
                 <div class="col-lg-6 text-center">
                     <h3>Klientenrolle</h3>
                     <a href="https://otp-quality.sdbb.ch/" class="btn btn-outline" role="button">Als KlientIn einloggen</a>
@@ -516,7 +515,8 @@
                 </div>
                 <div class="col-lg-4">
                     <p>Kompletter Beispielbericht eines Leistungstests:</p>
-                    <a href="pdf/BRTA-Beispielbericht.pdf" target="_blank"><i class="fa fa-file-pdf-o fa-3x"></i>
+                    <a href="pdf/BRTA-Beispielbericht.pdf" class="btn btn-outline" role="button" target="_blank">
+                        <span class="fa fa-file-pdf-o"> Bericht öffnen (PDF)</span>
                     </a>
                 </div>
             </div>
